<resources>
    <string name="app_name">Sarang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="artists_songs_or_podcasts">Artists, songs, or podcasts</string>
    <string name="browse_all">Browse all</string>
    <string name="play_what_you_love">Play what you love</string>
    <string name="search_for_artists_songs_podcasts_and_more">Search for artists, songs, podcasts, and more.</string>
    <string name="search_query">Search query</string>
    <string name="plan1_desc">Day and week plans. Ad-Free music on mobile. Download 30 Songs on 1 mobile device</string>
    <string name="plan2_desc">Choose 1, 3, 6 or 12 months of Premium. Pay with Paytm or UPI. Top up when you want</string>
    <string name="plan3_desc">Ad-free music.Download to listen offline</string>
    <string name="plan4_desc">2 Premium accounts. For couples who live together. Ad-free music. Download 10,000 songs/device, on up to 5 devices per account. Choose 1, 3, 6 or 12 months of Premium. Pay with Paytm or UPI. Top up when you want</string>
    <string name="plan5_desc">Ad-free music. Download to listen offline</string>
    <string name="disclaimer_studentPremium">Offer available only to students at an accredited higher education institution.</string>
    <string name="podcast_shows"><![CDATA[Podcast & Shows]]></string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <!-- <string name="default_web_client_id" translatable="false">31085457489-dfv4rgc9t3ko8bv6mp6nvc4ddvmjkr79.apps.googleusercontent.com</string> -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="carMode">
        <item>Only in a car</item>
        <item>Never</item>
    </string-array>

    <string-array name="wifiAndCellularStreaming">
        <item>Automatic</item>
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <string-array name="downloadQuality">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Very High</item>
    </string-array>

    <style name="MatchSpinnerStyle" parent="android:style/Widget.ListView.DropDown">
        <item name="android:divider">@color/grey1</item>
        <item name="android:dividerHeight">1dp</item>
    </style>

    <style name="MatchSpinnerTheme" parent="Theme.AppCompat">
        <item name="android:dropDownListViewStyle">@style/MatchSpinnerStyle</item>
    </style>

    <style name="clickable_effect">
        <item name="android:background">?android:attr/selectableItemBackground</item>
        <item name="android:foreground">?android:attr/selectableItemBackground</item>
        <item name="android:theme">@android:style/ThemeOverlay.Material.Dark</item>
        <item name="android:clickable">true</item>
        <item name="android:focusable">true</item>
    </style>

    <style name="BrandedSwitch">
        <item name="colorAccent">@color/green</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment.</string>
    <string name="payment_guideline2">*During payment don\'t press back button or don\'t do refresh</string>
    <string name="payment_guideline1">*Save and Secure Payment.</string>
    <string name="payment_guideline3">*In-case you are facing any issue let me know we are happy to solve your problem.</string>
    <string name="payment_guideline4">*If payment will failed and money deduct from your account then send us query will resolve it.</string>
    <string name="payment_guideline5">*Amount of failed payment will be come back within 48 hours.</string>
    <string name="payment_warning">Your Payment is in under process , please wait and don\'t press Back Button or Cancel !!</string>
</resources>