<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".view.fragment.SearchFragment">

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSearchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tvSearch"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:cardCornerRadius="6dp">

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12.7dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/artists_songs_or_podcasts"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvBrowseAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewSearchBar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/browse_all"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvBrowseAll"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="20dp" />

</RelativeLayout>