<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#093A51"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".view.activity.SarangPayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:orientation="horizontal"
        android:weightSum="4">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:src="@drawable/ic_spotify_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2.5"
            android:background="#A3D4DA"
            android:drawablePadding="20dp"
            android:fontFamily="@font/gotham_medium"
            android:gravity="center"
            android:text="Sarang Pay"
            android:textColor="#000000"
            android:textSize="35dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/biryani_light"
                android:text="Prabhakar Kumar"
                android:textAlignment="center"
                android:textColor="#074C6E"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/enter_cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/form_bg2"
                android:hint="XXXX/XXXX/XXXX/XXXX"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="#4B8DF4"
                android:visibility="gone"
                android:text="Send OTP"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <EditText
                android:id="@+id/enter_OTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/form_bg2"
                android:focusedByDefault="false"
                android:hint="Enter OTP"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="20dp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verifyOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:backgroundTint="#4B8DF4"
                android:text="Verify OTP"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/btn_selectAnother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/blue"
                android:fontFamily="@font/biryani_light"
                android:padding="5dp"
                android:text="Select another payment method"
                android:textColor="#FFFFFF"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/payment_guideline1"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/payment_guideline2"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/payment_guideline3"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/payment_guideline4"
                android:textColor="#000000"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/payment_guideline5"
                android:textColor="#000000"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_cancelPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="#F80000"
                    android:paddingHorizontal="50dp"
                    android:text="Cancel"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="#6AB818"
                    android:paddingHorizontal="50dp"
                    android:text="Pay"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/pay_amount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="15dp"
            android:background="@drawable/blue_bg"
            android:fontFamily="@font/biryani_light"
            android:paddingHorizontal="21dp"
            android:paddingVertical="40dp"
            android:text="Pay Rs. 0"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />


    </FrameLayout>
</LinearLayout>